# boris

./: .gitignore  Readme.md
example/: Cargo.toml
example/export/bodies/: aquascope_ref_aliasing.json  borrowing.json  branching.json  closure_capture.json  complex_arg.json  copy.json  copy_test.json  copy_trait.json  evaluation_order.json  example0.json  example1.json  higher_order_fn.json  interior_mutability.json  lt_annotation_limit.json  lt_annotation_test.json  mutability.json  ownership.json  revis.json  rustlive_listing_four.json  rustviz_hatra.json  rustviz_nll_different.json  rustviz_struct_lt.json
example/src/: aquascope_ref_aliasing.rs  borrowing.rs  branching.rs  closure_capture.rs  complex_arg.rs  copy.rs  copy_test.rs  copy_trait.rs  evaluation_order.rs  example0.rs  example1.rs  higher_order_fn.rs  interior_mutability.rs  lib.rs  lt_annotation_limit.rs  lt_annotation_test.rs  mutability.rs  ownership.rs  question_mark.rs  revis.rs  rustlive_listing_four.rs  rustviz_hatra.rs  rustviz_nll_different.rs  rustviz_struct_lt.rs
project/: .gitignore  Cargo.toml
project/boris_analysis/: Cargo.toml
project/boris_analysis/src/: analysis.rs  body_walker.rs  builder.rs  lib.rs  move_path.rs
project/boris_app/: Cargo.toml
project/boris_app/src/: lib.rs  main.rs
project/boris_exporter/: Cargo.toml
project/boris_exporter/src/: capture.rs  main.rs
project/boris_renderer/: Cargo.toml
project/boris_renderer/src/: body_drawer.rs  drawer.rs  lib.rs  view.rs
project/boris_shared/: Cargo.toml
project/boris_shared/src/: lib.rs  operators.rs
project/boris_viewer/: Cargo.toml  Readme.md  index.html
project/boris_viewer/assets/: sw.js
project/boris_viewer/src/: app.rs  examples.rs  lib.rs  main.rs
project/libs/la-arena/: Cargo.toml  Readme.md
project/libs/la-arena/src/: lib.rs  map.rs
