[package]
name = "boris_renderer"
version = "0.1.0"
edition = "2021"


[dependencies]

boris_shared = { path = "../boris_shared" }

egui = "0.24.0"
eframe = { version = "0.24.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }

tuple = "0.5.1"
smallvec = "1.11.0"
bitvec = "1.0.1"
itertools = "0.12.0"

la-arena = "0.3.1"
