[package]
name = "boris_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
boris_shared = { path = "../boris_shared" }
boris_renderer = { path = "../boris_renderer" }

egui = "0.24.0"
eframe = { version = "0.24.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }

log = "0.4"

serde = { version = "1", features = ["derive"] }
serde_json = "1.0.108"

tuple = "0.5.1"
smallvec = "1.11.0"
bitvec = "1.0.1"
itertools = "0.12.0"

la-arena = "0.3.1"

include_dir = "0.7.3"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2.89"
web-sys = {version = "0.3.66", features = ['Window']}

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
